# rust-web-development

structs/: Cargo.toml
structs/src/: main.rs
